@@ -20,3 +20,6 @@ EXPORTS
 
 	IncreaseGoogleAnalyticsCounter
 	IncreaseGoogleAnalyticsCounterAsynch
+
+	WgxDbgPrintLastError
+	WgxDisplayLastError
