@@ -86,18 +86,20 @@ extraResourceOptions=
 4=misc.c
 5=config.c
 6=web-analytics.c
+7=dbg.c
 [Header]
 1=wgx.h
 [Resource]
 1=wgx.rc
 [Other]
 [History]
-config.c,3282
-accel.c,3218
-wgx-mingw.def,262
-wgx.def,243
-wgx.rc,855
-wgx.c,872
-wgx.h,2616
-misc.c,1006
+web-analytics.c,6749
 i18n.c,3604
+wgx.h,2940
+wgx.c,872
+wgx.rc,855
+wgx.def,364
+wgx-mingw.def,393
+accel.c,3218
+config.c,4648
+misc.c,2945
